--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,10 @@ body {
   margin: 0 auto;
 }
 
+.drop-shadow {
+  filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.2));
+}
+
 .special-background {
   background-image: url('/contact/contactBackground.svg');
   background-repeat: no-repeat;
