Cambio en las imagenes de preview en projectSection

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,17 +47,9 @@ body {
   background-color: rgba(3, 7, 18, 0.6); /* 0.8 es la opacidad, puedes ajustarla según tus necesidades */
 }
 .bg-poject-preview {
-  /* background-image: url('/ConstructoraReal.webp'); */
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-.bg-folder {
-  background-image: url('/darkFolder.png');
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  background-position: center;
-
+  /* background-repeat: no-repeat; */
+  background-size: contain;
+  /* background-position: center; */
 }
 
 .special-background {
